# petsc-ts

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: attribution.py  multivariate.py  patterns.py  prof.py  tetris_optuna.py  tuning.py  ucr.py
petsc/: classifier.py  miner.py  pattern.py  pets.py  preprocessing.py
petsc_ts/: classifier.py  pets.py  preprocessing.py  sax.py
src/: bind.cpp  miner.cpp  miner.h  pattern.cpp  pattern.h  typing.h
tests/: test_classifier.py
