[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "petsc"
version = "1.0"
authors = [
    {name = "Len Feremans", email = "len.feremans@gmail.com"},
]
maintainers = [
    {name = "Stijn J. Rotman", email = "s.j.rotman@uvt.nl"}
]
description = "Pattern-based Embedding for Time Series Classification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "scikit-learn",
    "sktime",
    "sax-ts @ git+https://github.com/steenrotsman/sax-ts.git",
]
