[build-system]
requires = ["setuptools>=42", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petsc_ts"
version = "1.2"
authors = [
    {name = "Len Feremans", email = "len.feremans@gmail.com"},
]
maintainers = [
    {name = "Stijn J. Rotman", email = "s.j.rotman@uvt.nl"}
]
description = "Pattern-based Embedding for Time Series Classification"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "numpy",
    "scikit-learn",
    "aeon",
    "sax-ts",
]

[project.optional-dependencies]
test = ["pytest"]
examples = ["matplotlib"]

[tool.setuptools.packages.find]
include = ["petsc_ts"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
